@@ -13,8 +13,8 @@ public class LaneView implements LaneObserver, ActionListener {
 	private int roll;
 	private boolean initDone = true;
 
-	final JFrame frame;
-	final Container cPanel;
+	JFrame frame;
+	Container cpanel;
 	Vector bowlers;
 	int cur;
 	Iterator bowlIt;
@@ -27,7 +27,7 @@ public class LaneView implements LaneObserver, ActionListener {
 	JPanel[] pins;
 
 	JButton maintenance;
-	final Lane lane;
+	Lane lane;
 
 	public LaneView(Lane lane, int laneNum) {
 
@@ -35,8 +35,8 @@ public class LaneView implements LaneObserver, ActionListener {
 
 		initDone = true;
 		frame = new JFrame("Lane " + laneNum + ":");
-		cPanel = frame.getContentPane();
-		cPanel.setLayout(new BorderLayout());
+		cpanel = frame.getContentPane();
+		cpanel.setLayout(new BorderLayout());
 
 		frame.addWindowListener(new WindowAdapter() {
 			public void windowClosing(WindowEvent e) {
@@ -44,7 +44,7 @@ public class LaneView implements LaneObserver, ActionListener {
 			}
 		});
 
-		cPanel.add(new JPanel());
+		cpanel.add(new JPanel());
 
 	}
 
@@ -122,11 +122,25 @@ public class LaneView implements LaneObserver, ActionListener {
 		return panel;
 	}
 
+	public void setBallLabel(LaneEvent le, int k) {
+		int[] getScore = ((int[]) ((HashMap) le.getScore()).get(bowlers.get(k)));
+		for (int i = 0; i < 21; i++) {
+			if (getScore[i] != -1)
+				if (getScore[i] == 10 && (i % 2 == 0 || i == 19))
+					ballLabel[k][i].setText("X");
+				else if (i > 0 && (getScore[i] + getScore[i - 1] == 10 && i % 2 == 1))
+					ballLabel[k][i].setText("/");
+				else if (getScore[i] == -2 ){
+					ballLabel[k][i].setText("F");
+				} else
+					ballLabel[k][i].setText((new Integer(getScore[i])).toString());
+		}
+	}
+
 	public void receiveLaneEvent(LaneEvent le) {
 		if (lane.isPartyAssigned()) {
 			int numBowlers = le.getParty().getMembers().size();
 			while (!initDone) {
-				//System.out.println("chillin' here.");
 				try {
 					Thread.sleep(1);
 				} catch (Exception e) {
@@ -134,12 +148,10 @@ public class LaneView implements LaneObserver, ActionListener {
 				}
 			}
 
-			if (le.getFrameNum() == 1
-				&& le.getBall() == 0
-				&& le.getIndex() == 0) {
+			if (le.getFrameNum() == 1 && le.getBall() == 0 && le.getIndex() == 0) {
 				System.out.println("Making the frame.");
-				cPanel.removeAll();
-				cPanel.add(makeFrame(le.getParty()), "Center");
+				cpanel.removeAll();
+				cpanel.add(makeFrame(le.getParty()), "Center");
 
 				// Button Panel
 				JPanel buttonPanel = new JPanel();
@@ -155,47 +167,19 @@ public class LaneView implements LaneObserver, ActionListener {
 
 				buttonPanel.add(maintenancePanel);
 
-				cPanel.add(buttonPanel, "South");
+				cpanel.add(buttonPanel, "South");
 
 				frame.pack();
 
 			}
 
-			int[][] le_scores = le.getCumulScore();
+			int[][] lescores = le.getCumulScore();
 			for (int k = 0; k < numBowlers; k++) {
 				for (int i = 0; i <= le.getFrameNum() - 1; i++) {
-					if (le_scores[k][i] != 0)
-						scoreLabel[k][i].setText(
-							(Integer.valueOf(le_scores[k][i])).toString());
+					if (lescores[k][i] != 0)
+						scoreLabel[k][i].setText((new Integer(lescores[k][i])).toString());
 				}
-				for (int i = 0; i < 21; i++) {
-					if (((int[]) ((HashMap) le.getScore())
-						.get(bowlers.get(k)))[i]
-						!= -1)
-						if (((int[]) ((HashMap) le.getScore())
-							.get(bowlers.get(k)))[i]
-							== 10
-							&& (i % 2 == 0 || i == 19))
-							ballLabel[k][i].setText("X");
-						else if (
-							i > 0
-								&& ((int[]) ((HashMap) le.getScore())
-									.get(bowlers.get(k)))[i]
-									+ ((int[]) ((HashMap) le.getScore())
-										.get(bowlers.get(k)))[i
-									- 1]
-									== 10
-								&& i % 2 == 1)
-							ballLabel[k][i].setText("/");
-						else if ( ((int[])((HashMap) le.getScore()).get(bowlers.get(k)))[i] == -2 ){
-							
-							ballLabel[k][i].setText("F");
-						} else
-							ballLabel[k][i].setText(
-								(Integer.valueOf(((int[]) ((HashMap) le.getScore())
-										.get(bowlers.get(k)))[i]))
-									.toString());
-				}
+				setBallLabel(le, k);
 			}
 
 		}
